@@ -20,8 +20,9 @@ reposurgeon: malformed span
 reposurgeon: malformed span
 
 # Create some tags to test tag selection
-tag create tag1test @max(=C)
-tag create tag2test @max(=C)
+@max(=C) create tag tag1test
+# Test selection default
+create tag tag2test
 
 # Test tag filtering by name
 =T&/tag1/n inspect
