@@ -1,6 +1,6 @@
 ## Tag create test
 read <sample1.fi
 set flag echo
-tag create newtag :15
+:15 create tag newtag
 write -
 
