@@ -11,16 +11,17 @@ Repository head::
      Added =E selector for branch root commits.
      Added "clone" command.
      Command arguments can now be "-quoted strinds containing whitespace.
-     Graceful recovery frrom transcode errors.
+     Graceful recovery from transcode errors.
      Macro argument formal change from {0}, {1}, {2}... to %{0}, %{1}, %{2}...
      Move to Go-style match references (${1}) from Python ones (\1).
-     Simplifued syntax of solit command.
+     Simplified syntax of split command.
      repotool initialize becomes repotool makemake.
      Handle "progress" directive in fast-import streams.
      Tested support for reading darcs repositories.
      When enabling logging flags, the "+" syntax is now optional.
      "set" and "clear" are now "set flag" and "clear flag".
      The "readlimit" command has been merged into "set readlimit".
+     "tag create" becomes "creare tag". 
 
 4.38: 2023-06-14::
      Experimental Perforce (p4) mirroring support in repotool.
